Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2056

SWL - osd_trans_start()) ASSERTION( oti->oti_w_locks == 0 ) failed:

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Blocker
    • Lustre 2.4.0
    • Lustre 2.4.0
    • LLNL/Hyperion lustre-reviews 9573
    • 3
    • 4299

    Description

      <ConMan> Console [hyperion-rst6] log at 2012-09-30 16:00:00 PDT.
      2012-09-30 16:20:23          [A[B[1;2B[1;2B[1;2B[1;2B[1;2B[B[B[B[B[B[BLustre: 4162:0:(client.c:1917:ptlrpc_expire_one_request()) @@@ Request  sent has timed out for slow reply: [sent 1349048656/real 1349048656]  req@ffff880176df8c00 x1414547178955781/t0(0) o400->MGC192.168.127.6@o2ib@0@lo:26/25 lens 224/224 e 0 to 1 dl 1349048762 ref 1 fl Rpc:RXN/0/ffffffff rc 0/-1
      2012-09-30 16:46:02 LustreError: 166-1: MGC192.168.127.6@o2ib: Connection to MGS (at 0@lo) was lost; in progress operations using this service will fail
      2012-09-30 16:46:02 Lustre: MGS: Client b825c79a-32bd-3ab8-c5fa-b66aeb9bb741 (at 0@lo) reconnecting
      2012-09-30 16:46:02 LustreError: 4242:0:(obd_class.h:527:obd_set_info_async()) obd_set_info_async: dev 0 no operation
      2012-09-30 16:47:09 Lustre: MGC192.168.127.6@o2ib: Reactivating import
      2012-09-30 16:47:09 Lustre: MGC192.168.127.6@o2ib: Connection restored to MGS (at 0@lo)
      
      <ConMan> Console [hyperion-rst6] log at 2012-09-30 17:00:00 PDT.
      2012-09-30 17:02:38 LustreError: 6069:0:(osd_handler.c:837:osd_trans_start()) ASSERTION( oti->oti_w_locks == 0 ) failed: 
      
      2012-09-30 17:02:38 LustreError: 6069:0:(osd_handler.c:837:osd_trans_start()) LBUG
      2012-09-30 17:02:38 Pid: 6069, comm: mdt_rdpg03_002
      2012-09-30 17:02:38
      
      

      For some reason, stack did not dump, but vmcore obtained

      crash> bt
      PID: 6069   TASK: ffff880141836aa0  CPU: 7   COMMAND: "mdt_rdpg03_002"
       #0 [ffff880156e759c8] machine_kexec at ffffffff8103281b
       #1 [ffff880156e75a28] crash_kexec at ffffffff810ba792
       #2 [ffff880156e75af8] panic at ffffffff814fd591
       #3 [ffff880156e75b78] lbug_with_loc at ffffffffa0393f6b [libcfs]
       #4 [ffff880156e75b98] osd_trans_start at ffffffffa0a8d2bc [osd_ldiskfs]
       #5 [ffff880156e75bd8] mdd_trans_start at ffffffffa0f043a4 [mdd]
       #6 [ffff880156e75be8] mdd_close at ffffffffa0edf4f6 [mdd]
       #7 [ffff880156e75c58] cml_close at ffffffffa06baef6 [cmm]
       #8 [ffff880156e75c88] mdt_mfd_close at ffffffffa0f8a18e [mdt]
       #9 [ffff880156e75ce8] mdt_close at ffffffffa0f8ae0a [mdt]
      #10 [ffff880156e75d38] mdt_handle_common at ffffffffa0f66802 [mdt]
      #11 [ffff880156e75d88] mdt_readpage_handle at ffffffffa0f676d5 [mdt]
      #12 [ffff880156e75d98] ptlrpc_server_handle_request at ffffffffa0966b3c [ptlrpc]
      #13 [ffff880156e75e98] ptlrpc_main at ffffffffa0968111 [ptlrpc]
      #14 [ffff880156e75f48] kernel_thread at ffffffff8100c14a
      

      Attachments

        Activity

          People

            hongchao.zhang Hongchao Zhang
            cliffw Cliff White (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: