LU-2056 mdd: create transaction before lock object

OSD requires create transaction handle before lock the object,
however, mdd_close has a rare path can violate this rule.
This patch also did some code cleanup for mdd_close().

Signed-off-by: Liang Zhen <liang@whamcloud.com>
Change-Id: I2610acdc7ac4bbf6f22a9714db96b08ee430a613
Reviewed-on: http://review.whamcloud.com/4152
Tested-by: Hudson
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>